# communication-health-checker

./: .gitignore  README.md  communication_health_checker.spec  pyproject.toml
apps/desktop/: app.py  instance.py  main.py  resources.py
apps/desktop/routers/: ping.py  system.py  targets.py  ws.py
docs/: architecture.md
scripts/: build_app.sh  build_frontend.sh
src/communication_health_checker/application/: converters.py
src/communication_health_checker/application/dto/: ping_dto.py  target_dto.py
src/communication_health_checker/application/services/: periodic_ping_service.py
src/communication_health_checker/application/use_cases/: create_target_use_case.py  delete_all_targets_use_case.py  delete_target_use_case.py  get_ping_logs_use_case.py  get_target_use_case.py  list_targets_use_case.py  ping_targets_use_case.py  update_target_use_case.py
src/communication_health_checker/domain/ports/: clock_port.py  ping_event_publisher.py  ping_port.py
src/communication_health_checker/domain/repositories/: i_ping_log_repository.py  i_target_repository.py
src/communication_health_checker/infrastructure/adapters/: in_memory_ping_event_bus.py  subprocess_ping_adapter.py  system_clock.py
src/communication_health_checker/modules/: __init__.py  desktop_module.py
statics/: index.html
statics/assets/: index-DFHGBdTi.js
tests/: conftest.py
tests/architecture/: test_dependencies.py
tests/integration/: test_api.py
tests/unit/: fakes.py  test_host.py  test_periodic_ping_service.py  test_ping_parser.py  test_target.py  test_use_cases.py
(+12 files in other folders)
